Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ bin/
 lib/
 pharo
 pharo.version
+Pharo7.0-32bit-ccd1f64.sources Pharo7.0.4-0-64bit-ccd1f64.changes Pharo7.0.4-0-64bit-ccd1f64.image
