--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ pharo.version
 Pharo7.0-32bit-ccd1f64.sources Pharo7.0.4-0-64bit-ccd1f64.changes Pharo7.0.4-0-64bit-ccd1f64.image
 
 Smalltalk_??????-????.zip
+pharo-local/
